# wesnoth

./: .appveyor.vs2013.yml  .appveyor.vs2015.yml  .appveyor.vs2017.yml  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .travis.yml  AdditionalInfo.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile1604  Doxyfile  GAME_RULES  INSTALL  INSTALL.md  ISSUES  MANUAL  MANUAL.brazilian  MANUAL.catalan  MANUAL.chinese_simplified  MANUAL.czech  MANUAL.danish  MANUAL.french  MANUAL.german  MANUAL.hungarian  MANUAL.indonesian  MANUAL.italian  MANUAL.japanese  MANUAL.norwegian  MANUAL.polish  MANUAL.russian  MANUAL.serbian  (+154 more)
doc/man/: .gitignore  CMakeLists.txt  Makefile.am  po4a.cfg  wesnoth.6  wesnoth_editor.6  wesnothd.6
icons/: .gitignore  Makefile.am  Makefile.in  wesnoth.desktop  wesnoth_editor.desktop
po/: .gitignore  CMakeLists.txt  ChangeLog  DOMAINS  FINDCPP  FINDPY  LINGUAS  Makefile  Makefile.am  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  SConscript  ca.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  hu.po  it.po  nl.po  no.po  pl.po  po-update.sh  pot-update.sh.in  pt_BR.po  sk.po  sv.po  wesnoth-editor.pot  wesnoth-ei.FINDCFG  wesnoth-ei.pot  wesnoth-httt.FINDCFG  wesnoth-httt.pot  wesnoth-lib.pot  wesnoth-sotbe.FINDCFG  wesnoth-sotbe.pot  (+6 more)
po/ca/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/cs/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/da/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/de/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/el_GR/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/es/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/eu/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/fi/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/fr/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/hu/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/it/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/nl/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/no/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/pl/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/pt_BR/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/ru/: .gitignore  wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-tdh.po  wesnoth.po
po/sk/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/sv/: wesnoth-editor.po  wesnoth-ei.po  wesnoth-httt.po  wesnoth-lib.po  wesnoth-sotbe.po  wesnoth-tdh.po  wesnoth-trow.po  wesnoth.po
po/wesnoth-An_Orcish_Incursion/: FINDCFG  Makevars  bg.po  da.po  de.po  eo.po  es.po  et.po  fi.po  fr.po  gl_ES.po  hu.po  it.po  ja.po  ko.po  la.po  lt.po  nl.po  ru.po  sr.po  tr.po  zh_CN.po
po/wesnoth-Delfadors_Memoirs/: FINDCFG  Makevars  af.po  ca.po  da.po  de.po  el.po  en_GB.po  eo.po  fi.po  fr.po  he.po  it.po  ja.po  ko.po  la.po  lv.po  mk.po  nb_NO.po  nl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr@latin.po  tr.po
po/wesnoth-Descent/: Makevars  cs.po  ko.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  tl.po  wesnoth-Descent.pot
po/wesnoth-Liberty/: FINDCFG  Makevars  af.po  ca_ES@valencia.po  de.po  el.po  en_GB.po  et.po  fi.po  fr.po  gl_ES.po  he.po  it.po  nb_NO.po  nl.po  pt.po  ru.po  sl.po  wesnoth-Liberty.pot  zh_CN.po
po/wesnoth-Northern_Rebirth/: FINDCFG  Makevars  af.po  bg.po  ca.po  ca_ES@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl_ES.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  la.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tl.po  tr.po  wesnoth-Northern_Rebirth.pot  zh_CN.po
po/wesnoth-Sceptre_of_Fire/: FINDCFG  Makevars  af.po  bg.po  ca.po  ca_ES@valencia.po  cs.po  da.po  de.po  el.po  eo.po  fi.po  he.po  hu.po  id.po  ko.po  la.po  ro.po  sl.po  sv.po  tl.po  wesnoth-Sceptre_of_Fire.pot
po/wesnoth-Son_Of_The_Black_Eye/: LINGUAS  Makevars  af.po  ca.po  cs.po  el.po  en_GB.po  eo.po  eu.po  fi.po  fr.po  he.po  hu.po  id.po  it.po  nl.po  pt.po  sr.po  tl.po  wesnoth-Son_Of_The_Black_Eye.pot  zh_CN.po
po/wesnoth-Two_Brothers/: LINGUAS  Makevars  bg.po  ca.po  cs.po  da.po  de.po  en_AU.po  eo.po  es.po  et.po  eu.po  fr.po  (+19 more)
src/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile.am  Makefile.am.in  Makefile.in  SConscript  SConstruct  StackWalker.cpp  StackWalker.h  about.cpp  about.hpp  achievements.cpp  achievements.hpp  actions.cpp  actions.hpp  addon_checks.cpp  addon_checks.hpp  addon_client.cpp  addon_management.cpp  addon_management.hpp  addons_manager.cpp  addons_manager.hpp  ai.cpp  ai.hpp  ai2.hpp  ai_actions.cpp  ai_actions.hpp  ai_attack.cpp  ai_attack.hpp  ai_configuration.cpp  ai_configuration.hpp  ai_dfool.cpp  ai_dfool.hpp  ai_interface.cpp  ai_interface.hpp  ai_manager.cpp  ai_manager.hpp  ai_move.cpp  (+670 more)
(+18917 files in other folders)
